Working on mobile text issue (small commit)

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ a.active, a:hover {
 @media (max-width: 952px){
     label.logo {
         font-size: 30px;
-        padding-left: 50px;
+
     }
 
     nav ul li a {
